Fully add documentation using swaggo
