# cmd/api/main.go
@@ -11,25 +11,22 @@ import (
 
 	_ "site-checker-backend/docs"
 
-	"github.com/gin-gonic/gin"
 	"github.com/jmoiron/sqlx"
 	"github.com/joho/godotenv"
 	_ "github.com/lib/pq"
-	swaggerFiles "github.com/swaggo/files"
-	ginSwagger "github.com/swaggo/gin-swagger"
+	httpSwagger "github.com/swaggo/http-swagger"
 )
 
-// @title           Site Checker API
-// @version         1.0
-// @description     Backend API for monitoring website health and performance.
-// @termsOfService  http://swagger.io/terms/
+// @title           My Site Manager API
+// @version         1.1
+// @description     API for managing user sites with JWT authentication.
+// @host            localhost:8080
+// @BasePath        /
 
-// @contact.name   Jikky
-// @contact.url    linkedin.com/in/jikky-jikky-61603a30b
-// @contact.email  jjikky3@gmail.com
-
-// @host      localhost:8080
-// @BasePath  /api
+// @securityDefinitions.apikey ApiKeyAuth
+// @in                         header
+// @name                       Authorization
+// @description                Type 'Bearer <your-token>' to authenticate
 func main() {
 
 	godotenv.Load()
@@ -85,12 +82,9 @@ func main() {
 	mux.HandleFunc("POST /sites", auth_middleware.AuthMiddleware(siteHandler.CreateSite))
 	mux.HandleFunc("PUT /sites/history", auth_middleware.AuthMiddleware(siteHandler.GetHistory))
 	mux.HandleFunc("PUT /sites/activated", auth_middleware.AuthMiddleware(siteHandler.UpdateActiveStatus))
-	r := gin.Default()
 
 	// The endpoint to view your documentation
-	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
-
-	r.Run(":8080")
+	mux.Handle("/swagger/", httpSwagger.WrapHandler)
 	log.Println("Server running on :8080")
 	http.ListenAndServe(":8080", mux)
 }
