# internal/models/user.go
@@ -12,7 +12,6 @@ type AuthRequest struct {
 }
 
 type UpdatePasswordRequest struct {
-	Username    string `json:"username"`
 	OldPassword string `json:"old_password"`
 	NewPassword string `json:"new_password"`
 }
